--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,36 @@
-# Prerequisites
-*.d
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Precompiled Headers
-*.gch
-*.pch
+# testing
+/coverage
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# next.js
+/.next/
+/out/
 
-# Fortran module files
-*.mod
-*.smod
+# production
+/build
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# misc
+.DS_Store
+*.pem
 
-# Executables
-*.exe
-*.out
-*.app
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
