--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.3"
   }
 }
