--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "mathjs": "^12.3.0",
     "next": "^13.5.6",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
